modified:   blogs/题解/P1587 [NOI2016] 循环之美.md 	new file:   blogs/题解/P6891 [JOISC2020] ビルの飾り付け 4 .md 	deleted:    题解/P6891 [JOISC2020] ビルの飾り付け 4 .md

--- a/blogs/题解/P1587 [NOI2016] 循环之美.md
+++ b/blogs/题解/P1587 [NOI2016] 循环之美.md
@@ -1,8 +1,12 @@
-### 题意
+# P1587 [NOI2016] 循环之美
+
+**[题目传送门](https://www.luogu.com.cn/problem/P6891)**
+
+## Problem
 
 给定 $n,m,k$ ($1\le n,m\le10^9$，)问在 $k$ 进制下有多少个分数值不同的 $\frac{x}{y}$ 满足 $x\le n,y\le m$ 且其小数形式的循环节从小数点后第一位开始。
 
-### sol
+## Solution
 
 因为要求不同分数值，我们只考虑既约分数。类比十进制，故要求 $gcd(y,k)=1$。所以答案为：
 
@@ -42,7 +46,7 @@ $$
 
 很经典的整除分块。但是这里 $\mu$ 的前缀和要用到 $10^9$ 所以使用杜教筛。
 
-### AC Code
+## AC Code
 
 ```cpp
 #include <bits/stdc++.h>
